--- a/style.css
+++ b/style.css
@@ -19,3 +19,13 @@
   width:95%;
   height:100vh;
 }
+
+.container h1{
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%);
+  color:#fff;
+  font-weight: 600;
+  letter-spacing: 3px;
+}
